more config options for data filtering

--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,5 @@ InvCSVIPCol = 0
 InvCSVNameCol = 1
 InvCSVHostnameCol = 2
 InvCSVOSCol = 3
+EmptyCountsAsDiscrepancy = False
+OnlyShowFailedPings = True
