Ping servers config option

--- a/config.ini
+++ b/config.ini
@@ -8,4 +8,5 @@ InvCSVNameCol = 1
 InvCSVHostnameCol = 2
 InvCSVOSCol = 3
 EmptyCountsAsDiscrepancy = False
+PingServers = True
 OnlyShowFailedPings = True
