rvtools.csv summary

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 InvFile = inv.csv
 RVToolsFile = rvtools.csv
-PingTimes = 1
+CreateRVToolsSummary = True
 InvCSVHeader = 1
 InvCSVIPCol = 0
 InvCSVNameCol = 1
@@ -9,4 +9,5 @@ InvCSVHostnameCol = 2
 InvCSVOSCol = 3
 EmptyCountsAsDiscrepancy = False
 PingServers = True
+PingTimes = 1
 OnlyShowFailedPings = True
