Updated to the readme file

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ InvCSVIPCol = 0
 InvCSVNameCol = 1
 InvCSVHostnameCol = 2
 InvCSVOSCol = 3
-EmptyCountsAsDiscrepancy = False
+EmptyCountsAsDiscrepancy = True
 PingServers = True
 PingTimes = 1
 OnlyShowFailedPings = True
